--- a/_config.yml
+++ b/_config.yml
@@ -51,6 +51,15 @@ about_content: | # this will include new lines to allow paragraphs
   I am most skilled in: <mark>Project Managment</mark>, <mark>Process Improvement</mark>, and <mark>Project Collaboration</mark>
 
 content:
+  - title: Motivation and Goals # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: top-middle
+        quote: >
+          “Never let the fear of striking out keep you from playing the game” – Babe Ruth
+        description: | # this will include new lines to allow paragraphs
+          I was raised in a military family, and I have always admired our soldiers and what they do.  Ever since I graduated from college I have felt a pull to be a part of that in some small way, and if possible, do a service for those that serve our country.  My career thus far has provided me with many learning opportunities and many useful skills.  My goal is to find opportunities to employ those skills in the service of others, and in the areas I'm most passionate about.
+
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
