--- a/_config.yml
+++ b/_config.yml
@@ -179,14 +179,8 @@ content:
           For me, the best way to learn is by doing.  This project gave me a chance to learn some newer ways to create a web page and a brush up on things I've learned in the past.  A fun way to share my work experience and a little more about me.  Hope you like it!
 
   - title: A Little More About Me
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title:  ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
-        quote: >
-          “Tell me and I forget, teach me and I may remember, involve me and I learn.”
-          ― Benjamin Franklin
-        description: | # this will include new lines to allow paragraphs
+    layout: text
+    content: | # this will include new lines to allow paragraphs
           Alongside my interests Engineering and Project Management, I love to persue my personal hobbies:
           - Fishing
           - Weight Lifting and Nutrition
@@ -194,7 +188,9 @@ content:
           - Boogie Boarding
           - Travel
           - Collecting Christmas Village Houses :)
-      
+      #- [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      #Look at this cool image  
+      #![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
 
 
 # Footer
