--- a/_config.yml
+++ b/_config.yml
@@ -180,17 +180,22 @@ content:
 
   - title: A Little More About Me
     layout: list
-    content: | # this will include new lines to allow paragraphs
+    content:
+      - layout: top-middle
+        title: Hobbies
+        caption: blank
+        quote: >
           Alongside my interests Engineering and Project Management, I love to persue my personal hobbies:
+        description: | # this will include new lines to allow paragraphs
           - Fishing
           - Weight Lifting and Nutrition
           - Woodworking
           - Boogie Boarding
           - Travel
           - Collecting Christmas Village Houses :)
-      #- [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-      #Look at this cool image  
-      #![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
+           #- [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+           #Look at this cool image  
+           #![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
 
 
 # Footer
