--- a/_config.yml
+++ b/_config.yml
@@ -182,7 +182,7 @@ content:
     layout: list
     content:
       - layout: left
-        title: Hobbies
+        title: #![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
         caption: blank
         quote: >
           Alongside my interests Engineering and Project Management, I love to persue my personal hobbies:
@@ -193,9 +193,9 @@ content:
           - Boogie Boarding
           - Travel
           - Collecting Christmas Village Houses :)
-           #- [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-           #Look at this cool image  
-           #![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
+          - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+          - Look at this cool image  
+           
 
 
 # Footer
