--- a/_config.yml
+++ b/_config.yml
@@ -182,7 +182,7 @@ content:
     layout: list
     content:
       - layout: left
-        title: #![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
+        title: ![Trees](/brh1984.github.io/images/landscape-trees.jpg "Trees")
         caption: blank
         quote: >
           Alongside my interests Engineering and Project Management, I love to persue my personal hobbies:
