--- a/_config.yml
+++ b/_config.yml
@@ -182,10 +182,10 @@ content:
     layout: list
     content:
       - layout: left
-        title: Test of pic
+        title: <p style="text-align:center;">Canyoneering in Zion National Park</p>
         caption: 
            <a href="https://www.qries.com/">
-              <img alt="Qries" src="https://www.qries.com/images/banner_logo.png"
+              <img alt="Qries" src="https://github.com/brh1984/brh1984.github.io/blob/main/images/landscape-trees.jpg"
                width=150" height="70">
            </a>
         quote: >
@@ -198,11 +198,6 @@ content:
           - Travel
           - Collecting Christmas Village Houses :)
           - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-          - Look at this cool image  
-           <a href="https://www.qries.com/">
-              <img alt="Qries" src="https://www.qries.com/images/banner_logo.png"
-               width=150" height="70">
-           </a>
 
 
 # Footer
