--- a/_config.yml
+++ b/_config.yml
@@ -185,7 +185,7 @@ content:
         title: <p style="text-align:center;">Canyoneering in Zion National Park</p>
         caption: 
            <a href="https://www.qries.com/">
-              <img alt="Trees" src="https://github.com/brh1984/brh1984.github.io/blob/main/images/landscape-trees.jpg?raw=true"
+              <img alt="Trees" src="https://github.com/brh1984/brh1984.github.io/blob/main/images/zions canyon.jpg?raw=true"
                width=150" height="150">
            </a>
         quote: >
