--- a/_config.yml
+++ b/_config.yml
@@ -182,12 +182,13 @@ content:
     layout: list
     content:
       - layout: left
-        title: <p style="text-align:left;">Canyoneering in Zion National Park</p>
-        caption: 
+        title: 
            <a href="https://www.qries.com/">
               <img alt="Trees" src="https://github.com/brh1984/brh1984.github.io/blob/main/images/zions canyon.jpg?raw=true"
                width=225" height="175">
            </a>
+        caption: 
+           <p style="text-align:left;">Canyoneering in Zion National Park</p>
         quote: >
           Alongside my interests in Engineering and Project Management, I love to persue my personal hobbies:
         description: | # this will include new lines to allow paragraphs, [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
