--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brandon Horsley
+name: Brandon Horsley, PMP
 title: Senior Project Manager
 email: brandon082084@gmail.com
 phone: 713-923-0036 
