--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,8 @@ content:
         quote: >
           "It's easy to make a buck. It's a lot tougher to make a difference." - Tom Brokaw
         description: | # this will include new lines to allow paragraphs
-          I was raised in a military family, and I have always admired my Dad for his service to our country and those around him.  Ever since I graduated from college I have felt a pull to be a part of that, and to build a career that allows me to have a meeningful impact on the world around me.  My career thus far has provided me with many learning opportunities and useful skills, and I want to take the next steps to build on that foundation.  My goal is to find opportunities to employ my knowledge and skills in the service of others, and build on the knowledge and skills I've already gained in my career.
+          I was raised in a military family, and I have always admired my Dad for his service to our country and those around him.  Ever since I graduated from college I have felt a pull to be a part of that, and to build a career that allows me to have a meeningful impact on the world around me.  
+          My career thus far has provided me with many learning opportunities and useful skills, and I want to take the next steps to build on that foundation.  My goal is to find opportunities to employ my knowledge and skills in the service of others, and build on the knowledge and skills I've already gained in my career.
           
 
   - title: Personal Project # Title for the section
